# dobby-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  README_zh-CN.md
.github/: dependabot.yml
.github/workflows/: ci.yml
dobby-hook/: Cargo.toml  README.md
dobby-hook/src/: lib.rs
dobby-rs/: Cargo.toml  README.md
dobby-rs/src/: error.rs  lib.rs  options.rs
dobby-rs/src/arch/: aarch64.rs  mod.rs
dobby-rs/src/engine/: imports.rs  instrument.rs  manager.rs  mod.rs
dobby-rs/src/engine/backend/: mod.rs  unix_aarch64.rs  unix_x86_64.rs  windows_x86_64.rs  x86_64_common.rs
dobby-rs/src/platform/: unix.rs  windows.rs
framework/: Cargo.toml  README.md
framework/examples/: inline_hooks_builder.rs  inline_hooks_config.rs  install_replace.rs  logging.rs  macros.rs  module_params.rs  static_hook_basic.rs  symbols_aliases.rs
framework/examples/common/: mod.rs
framework/src/: hooks.rs  lib.rs  logging.rs  symbols.rs
framework/src/framework/: mod.rs  module.rs  params.rs
framework/src/hook_utils/: builder.rs  handle.rs  macros.rs  mod.rs  registry.rs  static_hook.rs
