[package]
name = "dobby-hook"
version = "0.1.4"
edition = "2024"
rust-version = "1.93.1"
license = "Apache-2.0"
description = "Facade crate for dobby inline-hook core and optional framework"
repository = "https://github.com/sorrow404Null/dobby-rs"
homepage = "https://github.com/sorrow404Null/dobby-rs"
documentation = "https://docs.rs/dobby-hook"
keywords = ["hook", "inline-hook", "trampoline", "instrumentation"]
categories = ["development-tools::debugging"]
readme = "README.md"

[features]
default = []
framework = ["dep:dobby-rs-framework"]

[dependencies]
dobby-hook-core = { path = "../dobby-rs", version = "0.1.4" }
dobby-rs-framework = { path = "../framework", version = "0.1.4", optional = true }
