[package]
name = "dobby-hook-core"
version = "0.1.3"
edition = "2024"
rust-version = "1.93.1"
license = "Apache-2.0"
description = "Dobby-like low-level inline hook core in Rust"
repository = "https://github.com/sorrow404Null/dobby-rs"
homepage = "https://github.com/sorrow404Null/dobby-rs"
readme = "README.md"
documentation = "https://docs.rs/dobby-hook-core"
keywords = ["hook", "inline-hook", "trampoline", "instrumentation"]
categories = ["development-tools::debugging"]

[lib]
crate-type = ["rlib"]

[dependencies]
once_cell = "1.21.3"
iced-x86 = { version = "1.21.0", default-features = false, features = ["std", "decoder", "encoder", "block_encoder"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
